# Check

./: README.md
LabelParserLib/: CMakeLists.txt
LabelParserLib/src/: CMakeLists.txt  LabelLocalizer.h  TextRecognizer.cpp  TextRecognizer.h  main.cpp
PriceTagParserLib/: CMakeLists.txt
PriceTagParserLib/src/: CMakeLists.txt  GlobalParameters.h  LibConfig.h  PriceTagLocalizer.cpp  PriceTagLocalizer.h  TextParser.cpp  TextParser.h  TextRecognizer.cpp  TextRecognizer.h  main.cpp
TotalCheque/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
TotalCheque/app/src/androidTest/java/com/lab_in_the_pocket/totalcheque/: ExampleInstrumentedTest.java
TotalCheque/app/src/main/: AndroidManifest.xml
TotalCheque/app/src/main/cpp/: label-parser-lib-wraper.cpp  price-tag-parser-lib-wraper.cpp
TotalCheque/app/src/main/java/com/lab_in_the_pocket/totalcheque/: MainActivity.java
TotalCheque/app/src/main/res/layout/: activity_main.xml
TotalCheque/app/src/main/res/values/: strings.xml
TotalCheque/app/src/test/java/com/lab_in_the_pocket/totalcheque/: ExampleUnitTest.java
TotalCheque/gradle/wrapper/: gradle-wrapper.properties
